cmake_minimum_required(VERSION 3.15)
project(Use_CompileOptimize)
set(CMAKE_CXX_STANDARD 17)
find_package(Threads)
find_package(glog REQUIRED)
include_directories(${GLOG_INCLUDE_DIRS} )
include_directories(include)
add_executable(test main.cpp)
if(${GLOG_FOUND})
    message(STATUS "glog found")
endif()
target_link_libraries(test -lpthread -lglog)